/* XMMS2 Components Status */ changed cdde to cdda
Levitation import of page 783 rev 8289.

--- a/10-Template/ComponentStatus.mediawiki
+++ b/10-Template/ComponentStatus.mediawiki
@@ -68,7 +68,7 @@ Current* list of components and sub-components (modules/plugins) of the XMMS2 da
 |-
 | style="border-bottom: 1px dotted #000; border-left: 1px dotted #000; background-color: #bfb" | [[Component:samba | samba]]
 |-
-| style="border-bottom: 1px dotted #000; border-left: 1px dotted #000; background-color: #bfb" | [[Component:cdde | cdde]]
+| style="border-bottom: 1px dotted #000; border-left: 1px dotted #000; background-color: #bfb" | [[Component:cdda | cdda]]
 |-
 | style="border-bottom: 1px dotted #000; border-left: 1px dotted #000; background-color: #bfb" | [[Component:GnomeVFS | GnomeVFS]]
 |-
