--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -9,7 +9,7 @@ All current clients should be found here.
 {{ClientTableEntry|AlbumThing| Graphical / GTK | Python | in development | Simple, Album oriented client }}
 {{ClientTableEntry|Azrael| Graphical / GTK | C | development stalled | Basic player with nice additions }}
 {{ClientTableEntry|Blastwave| Graphical / GTK | C | in development | Experimental XMMS2 client }}
-{{ClientTableEntry|bluegroove| Graphical / GTK | Ruby | in development | Typical player with queueing support }}
+{{ClientTableEntry|bluegroove| Graphical / GTK | Ruby | discontinued | Typical player with queueing support }}
 {{ClientTableEntry|Camio| Graphical / GTK | Python | in development | Small dock with basic commands }}
 {{ClientTableEntry|Chalyx| Library | Python | in development | Flexible modular library for XMMS2/MPD clients }}
 {{ClientTableEntry|Cocopapa| Console | C | in development | Complex Collection Pattern Parser }}
