Levitation import of page 2339 rev 8293.

--- a/0-/Client:Abraca.mediawiki
+++ b/0-/Client:Abraca.mediawiki
@@ -1,1 +1,1 @@
-{{Client| name=Abraca| author=[[Sebastian Sareyko]]| website=http://nooms.de/projects/abraca/| version=[http://nooms.de/media/abraca/abraca-0.2.tar.bz2 0.2]| devlanguage=C| ui=GTK2| screenshots=[http://nooms.de/media/abraca/abraca0.2.png] | description=Abraca is a GTK2 client for the XMMS2 music player. It is designed with [[collections]] in mind, which makes managing your music a breeze.}}
+{{Client| name=Abraca| author=Sebastian Sareyko and Daniel Svensson| website=http://abraca.xmms.se/| version=[http://abraca.xmms.se/abraca-0.3.tar.gz 0.3]| devlanguage=Vala since 0.3| ui=GTK2| screenshots=[http://abraca.xmms.se/abraca-large.png] | description=Abraca is a GTK2 client for the XMMS2 music player. It is designed with [[collections]] in mind, which makes managing your music a breeze.}}
