--- a/0-/Download XMMS2.mediawiki
+++ b/0-/Download XMMS2.mediawiki
@@ -10,6 +10,12 @@ The official XMMS2 Debian packages maintained by [[User:rafl|Florian Ragwitz]]. 
 
  apt-cache search xmms2
 
+; Ubuntu - Hardy Heron and following
+
+ apt-get install xmms2
+
+If you want newer packages for Hardy Heron you can grab it from [[User:bdrung|Benjamin Drung]]'s PPA: https://launchpad.net/~bdrung/+archive
+
 ; Fedora
 
 Binary packages of XMMS2, as well as [[Client:gxmms2 | gxmms2]] are available in tarballs from [http://www.linuxfans.org Linux Fans] (Note: Chinese site):
