/* Notes to client authors */
Levitation import of page 2462 rev 8300.

--- a/0-/Release:DrLecter.mediawiki
+++ b/0-/Release:DrLecter.mediawiki
@@ -22,6 +22,9 @@
 
 === Notes to client authors ===
 
+* The current_pos method and broadcast now returns a dict.
+* (C-api) xmmsc_result_get_string takes a _const_ string.
+
 === Notes to xform authors ===
 
 === Full ChangeLog ===
