--- a/0-/Release:DrLecter.mediawiki
+++ b/0-/Release:DrLecter.mediawiki
@@ -29,9 +29,9 @@ Upgrading should be smooth.
 
 === Notes to client authors ===
 
-* The current_pos method and broadcast now returns a dict.
-* (C-api) xmmsc_result_get_string takes a _const_ string.
-* The wildcards for the MATCH collection-operator are now * and ?
+* The current_pos method and broadcast now returns a dict with the following keys: "name" stores the name of the playlist in which the current pos was changed, "position" contains the new position.
+* (C-api) xmmsc_result_get_string takes a **const** string.
+* The wildcards for the MATCH collection-operator are now * and ? instead of % and _.
 
 === Notes to xform authors ===
 * xforms now can specify a default priority using XMMS_STREAM_TYPE_PRIORITY
