--- a/0-/GSoC:2008/Collections 2.0/Querying concept.mediawiki
+++ b/0-/GSoC:2008/Collections 2.0/Querying concept.mediawiki
@@ -11,11 +11,11 @@ The client developer provides a collection structure resulting in a medialist to
 Note that every cell of the query-result can contain an xmms2-datatype, so that for instance all metadata can be queried in a propdict:
 
  coll: reference[reference=Gothic Metal,namespace=Playlists]
- fetch: {{ type=id,                arguments={},             label=id       },
-         { type=value,             arguments={field=artist}, label=artist   },
-         { type=value,             arguments={field=album},  label=album    },
-         { type=value,             arguments={field=title},  label=title    },
-         { type=source_value_dict, arguments={field=size},   label=datasize }}
+ fetch: {{{ type=id,                arguments={}},             label=id       },
+         {{ type=value,             arguments={field=artist}}, label=artist   },
+         {{ type=value,             arguments={field=album}},  label=album    },
+         {{ type=value,             arguments={field=title}},  label=title    },
+         {{ type=source_value_dict, arguments={field=size}},   label=datasize }}
  
  result: {{ id=141,  artist=Evanescence,       album=Not For Your Ears, title=Taking Over Me (Long), datasize={plugin/id3v2=5304040, plugin/file=5326558} },
           { id=113,  artist=Evanescence,       album=Anywhere But Home, title=Thoughtless,           datasize={plugin/id3v2=8286281, plugin/file=8314880} },
@@ -27,11 +27,11 @@ Note that every cell of the query-result can contain an xmms2-datatype, so that 
 The client developer provides a collection structure to the daemon. The daemon then queries the metadata from the sqlite-database, so that there is one row for every id of the resulting collection.
 
  coll: reference[reference=Gothic Metal,namespace=Playlists]
- fetch: {{ type=id,                arguments={},             label=id       },
-         { type=value,             arguments={field=artist}, label=artist   },
-         { type=value,             arguments={field=album},  label=album    },
-         { type=value,             arguments={field=title},  label=title    },
-         { type=source_value_dict, arguments={field=size},   label=datasize }}
+ fetch: {{{ type=id,                arguments={}},             label=id       },
+         {{ type=value,             arguments={field=artist}}, label=artist   },
+         {{ type=value,             arguments={field=album}},  label=album    },
+         {{ type=value,             arguments={field=title}},  label=title    },
+         {{ type=source_value_dict, arguments={field=size}},   label=datasize }}
  
  result: {{ id=113,  artist=Evanescence,       album=Anywhere But Home, title=Thoughtless,           datasize={plugin/id3v2=8286281, plugin/file=8314880} },
           { id=141,  artist=Evanescence,       album=Not For Your Ears, title=Taking Over Me (Long), datasize={plugin/id3v2=5304040, plugin/file=5326558} },
